@startuml ER Diagram

' ER diagram with only 1:1 and 1:N relationships.
hide circle
skinparam linetype ortho

' Entities
entity "Member" as Member {
    * id: integer <<generated>>
    --
    * version: integer
      last_name: text
      first_name: text
      **address**: Address
    * **gender**: Gender
      date_of_birth: date
      email_address: text
    * interests: list[Genre]
    * interests_json: list[text]
      books: list[Book]
    * is_student: bool
    * member_since: date
    * generated: timestamp
    * updated: timestamp
}

entity "Address" as Address {
    * id: integer <<generated>>
    --
      place: text
      postal_code: text
    * **member_id**: integer <<FK>>
}

entity "Book" as Book {
    * id: integer <<generated>>
    --
    name: text
    * genre: Genre
    * author: text
    * isbn: text <<unique>>
    * still_borrowed: boolean
    * **member_id**: integer <<FK>>
}

' Relationships
Member ||--|| Address : "has"
Member ||--o{ Book : "rents"


footer Ole Menke | Paul Bräuninger

@enduml
